--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -6,9 +6,12 @@
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo" />
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
   <link rel="stylesheet" href="/css/admin/adminAllBrands.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminAllChats.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminAllCustomers.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminAllEmployees.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminAllOrders.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminAllProducts.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminAllPurchases.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminAllStores.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminBody.css">
   <link rel="stylesheet" href="/css/admin/adminBrand.css" media="print" onload="this.media='all'">
