--- a/src/public/css/admin/adminAllPurchases.css
+++ b/src/public/css/admin/adminAllPurchases.css
@@ -1,4 +1,4 @@
-.admin-all-orders-container {
+.admin-all-purchases-container {
   .filter-and-create {
     display: flex;
     align-items: center;
@@ -8,7 +8,7 @@
     background-color: #FFDFDF;
     padding: 5px;
   }
-  .create-orders {
+  .create-purchases {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -42,7 +42,7 @@
     overflow-x: auto;
     padding: 10px 0;
   }
-  table, th, td {
+  table, td {
     text-align: center;
   }
   table {
@@ -83,33 +83,23 @@
     tr:hover {
       filter: brightness(80%);
     }
-    button {
-      width: fit-content; 
-      height: 30px;
-      background-color: white;
-      color: #D1A6A6;
-      border: 1px solid #D1A6A6;
-      border-radius: 5px;
-      cursor: pointer;
-    };
-    button:hover {
-      filter: brightness(80%);
+    img {
+      border-radius: 10px;
+      width: 40px;
+      aspect-ratio: 1/1;
     }
   }
-  .total {
-    border: 1px solid black;
-    max-width: 200px;
-    height: fit-content;
-    margin-top: 20px;
-    .total-title, .total-number {
-      max-width: 200px;
-      font-weight: bolder;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-block-start: 5px;
-      margin-block-end: 5px;
-    }
+  button {
+    width: fit-content; 
+    height: 30px;
+    background-color: white;
+    color: #D1A6A6;
+    border: 1px solid #D1A6A6;
+    border-radius: 5px;
+    cursor: pointer;
+  };
+  button:hover {
+    filter: brightness(80%);
   }
   .pagination {
     display: flex; 
@@ -126,10 +116,10 @@
       width: 20px;
       color: black;
     }
-  }  
+  }    
 }
 @media screen and (max-width: 700px) {
-  .admin-all-orders-container {
+  .admin-all-purchases-container { 
     .board-title {
       p { font-size: 25px;}
     }
@@ -140,7 +130,8 @@
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
       }
+      td:nth-child(4) { display: none;}
       td:nth-child(5) { display: none;}
     }
-  }
+  } 
 }
