--- a/src/public/css/admin/adminAllStores.css
+++ b/src/public/css/admin/adminAllStores.css
@@ -1,4 +1,29 @@
 .admin-all-stores-container {
+  .filter-and-create {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .filter {
+    background-color: #FFDFDF;
+    padding: 5px;
+  }
+  .create-stores {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: black;
+    text-decoration: none;
+    gap: 5px;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #D1A6A6;
+    padding: 10px;
+    p {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
+  }
   .board-title {
     width: 100%;
     display: flex;
@@ -60,6 +85,18 @@
       a { text-decoration: none; color: black; font-weight: bold; }
     }
     tr:hover {
+      filter: brightness(80%);
+    }
+    button {
+      width: fit-content; 
+      height: 30px;
+      background-color: white;
+      color: #D1A6A6;
+      border: 1px solid #D1A6A6;
+      border-radius: 5px;
+      cursor: pointer;
+    };
+    button:hover {
       filter: brightness(80%);
     }
   }
