--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -20,21 +20,21 @@
     <table>
       <thead>
         <tr>
-          <td>Id      </td>
-          <td>Hãng    </td>
-          <td>Tên     </td>
-          <td>Loại    </td>
-          <td>Giá     </td>
-          <td>Số lượng</td>
-          <td>Thao tác</td>
+          <td style="width:  5%">STT     </td>
+          <td style="width: 15%">Hãng    </td>
+          <td style="width: 30%">Tên     </td>
+          <td style="width: 10%">Loại    </td>
+          <td style="width: 20%">Giá     </td>
+          <td style="width: 10%">Số lượng</td>
+          <td style="width: 10%">Thao tác</td>
         </tr>
       </thead>
 
       <tbody>
         {{#each product}}
         <tr>
-          <td style="width: 10%;">{{addIndex @index 1}}</td>
-          <td style="width: 20%;">{{this.brand}}</td>
+          <td>{{addIndex @index 1}}</td>
+          <td>{{this.brand}}</td>
           <td style="
                 display: flex; 
                 justify-content: start;
@@ -44,10 +44,10 @@
             <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
             <p>{{this.name}}</p>
           </td>  
-          <td style="width: 10%;">{{this.categories}}</td>
-          <td style="width: 10%;" id="product-price">{{this.price}}</td>
-          <td style="width: 10%;" id="product-quantity">{{this.quantity}}</td>
-          <td style="width: 10%;">
+          <td>{{this.categories}}</td>
+          <td id="product-price">{{this.price}}</td>
+          <td id="product-quantity">{{this.quantity}}</td>
+          <td>
             <a href="/admin/all-products/product/{{this._id}}" class="update-button"><button>Chi tiết</button></a>
             <button id="{{this._id}}" name="{{this.name}}" onclick="reply_click(this.id, this.name)">Xoá</button> 
           </td>
