--- a/src/resource/views/admin/trash.hbs
+++ b/src/resource/views/admin/trash.hbs
@@ -4,23 +4,24 @@
   </div>
 
   <div class="table">
-    <table style="width:100%">
+    <table>
       <thead>
         <tr>
-          <td> Id       </td>
-          <td> Hãng     </td>
-          <td> Tên      </td>
-          <td> Loại     </td>
-          <td> Giá      </td>
-          <td> Lựa chọn </td>
+          <td style="width:  5%">STT     </td>
+          <td style="width: 15%">Hãng    </td>
+          <td style="width: 30%">Tên     </td>
+          <td style="width: 10%">Loại    </td>
+          <td style="width: 20%">Giá     </td>
+          <td style="width: 10%">Số lượng</td>
+          <td style="width: 10%">Thao tác</td>
         </tr>
       </thead>
 
       <tbody>
         {{#each product}}
         <tr>
-          <td style="width: 10%;">{{addIndex @index 1}}</td>
-          <td style="width: 15%;">{{this.brand}}</td>
+          <td>{{addIndex @index 1}}</td>
+          <td>{{this.brand}}</td>
           <td style="
                 display: flex; 
                 justify-content: start;
@@ -30,9 +31,10 @@
             <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy">
             <p>{{this.name}}</p>
           </td>
-          <td style="width: 10%;">{{this.categories}}</td>
-          <td style="width: 10%;" id="product-price">{{this.price}}</td>
-          <td style="width: 15%;">
+          <td>{{this.categories}}</td>
+          <td id="product-price">{{this.price}}</td>
+          <td id="product-quantity">{{this.quantity}}</td>
+          <td>
             <button id="{{this._id}}" onclick="clickToRestore(this.id)">Khôi Phục</button>
             <button id="{{this._id}}" onclick="clickToDelete(this.id)">Xoá</button>
           </td>
