--- a/src/resource/views/admin/allCustomers.hbs
+++ b/src/resource/views/admin/allCustomers.hbs
@@ -40,7 +40,7 @@
           <td>{{this.userInfo.address}}</td>
           <td>{{this.totalOrder}}</td>
           <td class="total-price">{{this.totalPrice}}</td>
-          <td><a href="/admin/all-customers/{{this._id}}"><button>Chi Tiết</button></a></td>
+          <td><a href="/admin/all-customers/customer/{{this._id}}"><button>Chi Tiết</button></a></td>
         </tr>
         {{/each}}
       </tbody>
