--- a/src/resource/views/admin/allOrders.hbs
+++ b/src/resource/views/admin/allOrders.hbs
@@ -40,7 +40,7 @@
           <td id="total-order-price">{{this.totalOrderPrice}}       </td>
           <td>{{this.createdAt}}         </td>
           <td>{{this.status}}            </td>
-          <td><a href="/admin/all-orders/{{this._id}}"><button>Chi Tiết</button></a></td>
+          <td><a href="/admin/all-orders/order/{{this._id}}"><button>Chi Tiết</button></a></td>
         </tr>
         {{/each}}
       </tbody>
