--- a/src/resource/views/admin/detailCustomer.hbs
+++ b/src/resource/views/admin/detailCustomer.hbs
@@ -54,7 +54,7 @@
         <td style="text-align: center;">{{this.paymentMethod}}   </td>
         <td style="text-align: center;">{{this.status}}          </td>
         <td style="text-align: center;">
-          <a href="/admin/all-orders/{{this._id}}">Chi Tiết</a>            
+          <a href="/admin/all-orders/order/{{this._id}}">Chi Tiết</a>            
         </td>
       </tr>
       {{/each}}
