--- a/src/resource/views/layouts/empty.hbs
+++ b/src/resource/views/layouts/empty.hbs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/empty/denyAccess.css">
   <link rel="stylesheet" href="/css/empty/signIn.css">
   <link rel="stylesheet" href="/css/empty/signUp.css">
-  <link rel="stylesheet" href="/css/user/userBody.css">
+  <link rel="stylesheet" href="/css/user/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
