--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -6,19 +6,19 @@
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo"/>
   <meta name="description" content="Buny Store - Cửa hàng mỹ phẩm chính hãng với sản phẩm chăm sóc da và trang điểm từ thương hiệu uy tín. Khám phá bí quyết làm đẹp tại Buny Store!">
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
-  <link rel="stylesheet" href="/css/user/userAdvertise.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userAllBrands.css"media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userAllProducts.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userAllOrders.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userFooter.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userHeader.css">
-  <link rel="stylesheet" href="/css/user/userHome.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userIntroduce.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userOrder.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userOrdersChecking.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userProduct.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userUpdateProfile.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/user/userBody.css">
+  <link rel="stylesheet" href="/css/user/advertise.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/allBrands.css"media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/allProducts.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/allOrders.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/footer.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/header.css">
+  <link rel="stylesheet" href="/css/user/home.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/introduce.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/order.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/ordersChecking.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/product.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/profile.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/body.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
