--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -1,6 +1,6 @@
-{{!-- <div class="advertisement-container">
+<div class="advertisement-container">
   {{> userAdvertise}}
-</div> --}}
+</div>
 
 <div class="flash-deal-board">
   <div class="title">
