--- a/src/public/css/user/home.css
+++ b/src/public/css/user/home.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 10px;
   .title {
     display: flex; 
     align-items: center; 
@@ -58,7 +59,7 @@
       background-color: white; 
       max-width: 220px;
       padding: 5px 12px;
-      scroll-snap-align: none start;
+      /* scroll-snap-align: start; */
       border-radius: 10px;
       #product-price {
         background-color: #FFDFDF;
@@ -173,7 +174,7 @@
 @media screen and (max-width: 700px) {
   .flash-deal-board, .hot-products-board, .content-board, .famous-brand-board {
     .title {
-      font-size: 25px !important;
+      font-size: 20px !important;
     }
   }
 }
