--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -60,14 +60,11 @@
   chat.onclick = function() {chatBox.style.display === 'none' ? chatBox.style.display = '' : chatBox.style.display = 'none'}
   minimize.onclick = function () {chatBox.style.display = 'none'}
 
-  if (userId === '65eddb9e7abb421b88771b35') {
+  {{!-- if (userId === '65eddb9e7abb421b88771b35') {
     socket.emit('joinRoom', '67682d1ef5b2b2e80b0f439c')
   } else {
     socket.emit('joinRoom', 'guest')
-  }
-  if (`{{sync_chat}}`) {
-    const chatData = fetch()
-  }
+  } --}}
     
   sendBtn.onclick = function() {
     if (input.value.trim() !== '') {
@@ -85,7 +82,7 @@
 
   input.addEventListener("keypress", function(event) {
     if (event.key === "Enter" && input.value.trim() !== '') {
-      sendBtn.click();
+      sendBtn.click()
       input.value = ''
       sendBtn.classList.add('not-allowed')
     }
@@ -93,12 +90,39 @@
 
   socket.on('chat message', (id, msg) => {
     console.log(`${id},${msg}`)
-    const chat = document.createElement('li');
-    chat.textContent = msg;
+    const chat = document.createElement('li')
+    chat.textContent = msg
     if (id.trim() === userId) {
       chat.setAttribute('class', 'right-content')
     }  
       chatContent.appendChild(chat);
   });
+
+  async function getChatData() {
+    try {
+      const response = await fetch(`/api/chat/${userId}`)
+      if (!response.ok) {
+        throw new Error(`Response status: ${response.status}`)
+      }
+      const json = await response.json();
+      const messages = json.data
+      console.log(messages);
+      messages.forEach((message) => {
+        const chat = document.createElement('li')
+        chat.textContent = message.content 
+        if (message.senderId === userId) chat.setAttribute('class', 'right-content')
+        chatContent.appendChild(chat)
+      })
+    } catch (error) {
+      console.error("Error fetching chat data:", error)
+    }
+  }
+
+  {{!-- if (`{{sync_chat}}`) {
+    getChatData()
+  } --}}
+
+  getChatData()
+
 
 </script>
