--- a/src/resource/views/users/order.hbs
+++ b/src/resource/views/users/order.hbs
@@ -51,10 +51,10 @@
     <tbody>
       {{#each orderInfo.products}}
       <tr>
-        <td><p>{{this.name}}</p>                            </td>
-        <td style="text-align: center;" id="product-price">{{this.price}}      </td>
-        <td style="text-align: center;">{{this.quantity}}   </td>
-        <td style="text-align: center;" id="total-product-price">{{this.totalPrice}} </td>
+        <td><p>{{this.name}}</p></td>
+        <td style="text-align: center;" id="product-price">{{this.price}}</td>
+        <td style="text-align: center;">{{this.quantity}}</td>
+        <td style="text-align: center;" id="total-product-price">{{this.totalPrice}}</td>
       </tr>
       {{/each}}
     </tbody>
@@ -66,7 +66,7 @@
   var productPrice      = document.querySelectorAll('td#product-price')
   var totalProductPrice = document.querySelectorAll('td#total-product-price')
   
-  totalOrderPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
+  {{!-- totalOrderPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
   productPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
-  totalProductPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
+  totalProductPrice.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'}) --}}
 </script>
