--- a/src/resource/views/admin/detailBrand.hbs
+++ b/src/resource/views/admin/detailBrand.hbs
@@ -1,9 +1,9 @@
-<div class="order-details-container">
+<div class="brand-details-container">
   <form method="POST" action="/admin/all-orders/order-updated/{{order._id}}?_method=PUT">
     <table id="table-1">
       <thead>
         <tr>
-          <td colspan="2"> Thông tin chung </td>
+          <td colspan="2"> THÔNG TIN THƯƠNG HIỆU </td>
         </tr>
       </thead>
       <tr>
