--- a/src/resource/views/admin/detailProduct.hbs
+++ b/src/resource/views/admin/detailProduct.hbs
@@ -1,7 +1,7 @@
-<div class="admin-update-product-container">
+<div class="product-details-container">
   <form method="POST" action="/admin/all-products/product/updated/{{product._id}}?_method=PUT" enctype="multipart/form-data">
     <div class="form-title">
-      <p>Thông tin sản phẩm</p>
+      <p>THÔNG TIN SẢN PHẨM</p>
     </div>
 
     <div class="form-group">
