--- a/src/public/css/admin/allBrands.css
+++ b/src/public/css/admin/allBrands.css
@@ -8,6 +8,22 @@
     background-color: #FFDFDF;
     padding: 5px;
   }
+  .create-brands {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: black;
+    text-decoration: none;
+    gap: 5px;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #D1A6A6;
+    padding: 10px;
+    p {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
+  }
   .board-title {
     width: 100%;
     display: flex;
