--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -204,7 +204,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100vh;
-  background-color: #FFDFDF;
+  backdrop-filter: blur(5px);
   top: 0;
   left: 0;
   display: flex;
