--- a/src/resource/views/admin/createCustomer.hbs
+++ b/src/resource/views/admin/createCustomer.hbs
@@ -1,4 +1,4 @@
-<div class="admin-create-product-container">
+<div class="admin-create-customer-container">
   <form id="form-1" method="post" action="/admin/all-customers/customer/created" enctype="multipart/form-data">
     <div class="form-title">
       <p>Thêm khách hàng mới</p>
@@ -17,6 +17,10 @@
     <div class="form-group">
       <input type="text" class="form-control" id="address" name="address" placeholder="Địa chỉ">
       <span class="form-message"></span>
+    </div>
+
+    <div class="submit-button">
+      <button title="submit" type="submit">Hoàn thành</button>
     </div>
   </form>
 </div>
