--- a/src/resource/views/admin/detailCustomer.hbs
+++ b/src/resource/views/admin/detailCustomer.hbs
@@ -2,7 +2,7 @@
   <table id="table-1">
     <thead>
       <tr>
-        <td colspan="2"> Thông tin khách hàng </td>
+        <td colspan="2"> THÔNG TIN KHÁCH HÀNG </td>
       </tr>
     </thead>
     <tr>
