--- a/src/resource/views/admin/detailOrder.hbs
+++ b/src/resource/views/admin/detailOrder.hbs
@@ -3,7 +3,7 @@
     <table id="table-1">
       <thead>
         <tr>
-          <td colspan="2"> Thông tin chung </td>
+          <td colspan="2"> THÔNG TIN ĐƠN HÀNG </td>
         </tr>
       </thead>
       <tr>
